fix layout shift issue in mobile

--- a/styles/abstracts/mixins/_main-container.scss
+++ b/styles/abstracts/mixins/_main-container.scss
@@ -1,6 +1,6 @@
 @mixin full-screen {
     width: 100%;
-    height: 100dvh;
+    height: 100svh;
 }
 
 @mixin max-width-padding($y: 0, $x: 5%) {
